Bug 970303 - Don't call DatabaseInfo::Remove() when app is killed, in case another app is still using the database. r=bent